--- a/.env.example
+++ b/.env.example
@@ -14,7 +14,7 @@ AUTO_REGISTER=false
 # HTTP
 HTTP_HOST=0.0.0.0
 HTTP_PORT=80
-HTTP_MODE=SWOOLE_PROCESS
+HTTP_MODE=SWOOLE_BASE
 HTTP_TYPE=SWOOLE_SOCK_TCP
 
 # WebSocket
