--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
         "swoft/rpc-client": "^2.0",
         "swoft/task": "^2.0",
         "swoft/proxy": "^2.0",
+        "swoft/error-handler": "^2.0",
         "swoft/component": "2.0.x-dev as 2.0"
     },
     "require-dev": {
