--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,10 @@
     "license": "Apache-2.0",
     "require": {
         "php": ">=7.2",
-        "ext-swoole": "^4.3.1",
+        "ext-swoole": "^4.3",
         "ext-pdo": "*",
         "ext-json": "*",
+        "ext-redis": "*",
         "swoft/annotation": "^2.0",
         "swoft/bean": "^2.0",
         "swoft/event": "^2.0",
@@ -34,9 +35,9 @@
         "swoft/rpc-server": "^2.0",
         "swoft/rpc-client": "^2.0",
         "swoft/task": "^2.0",
+        "swoft/redis": "^2.0",
         "swoft/proxy": "^2.0",
-        "swoft/error-handler": "^2.0",
-        "swoft/component": "2.0.x-dev as 2.0"
+        "swoft/component": "dev-master as 2.0"
     },
     "require-dev": {
         "swoft/swoole-ide-helper": "dev-master",
