--- a/.env.example
+++ b/.env.example
@@ -47,26 +47,6 @@ OPEN_HTTP2_PROTOCOL=false
 SSL_CERT_FILE=/path/to/ssl_cert_file
 SSL_KEY_FILE=/path/to/ssl_key_file
 
-# Database Master nodes
-DB_NAME=dbMaster
-DB_URI=127.0.0.1:3306/test?user=root&password=123456&charset=utf8,127.0.0.1:3306/test?user=root&password=123456&charset=utf8
-DB_MIN_ACTIVE=5
-DB_MAX_ACTIVE=10
-DB_MAX_WAIT=20
-DB_MAX_WAIT_TIME=3
-DB_MAX_IDLE_TIME=60
-DB_TIMEOUT=2
-
-# Database Slave nodes
-DB_SLAVE_NAME=dbSlave
-DB_SLAVE_URI=127.0.0.1:3306/test?user=root&password=123456&charset=utf8,127.0.0.1:3306/test?user=root&password=123456&charset=utf8
-DB_SLAVE_MIN_ACTIVE=5
-DB_SLAVE_MAX_ACTIVE=10
-DB_SLAVE_MAX_WAIT=20
-DB_SLAVE_MAX_WAIT_TIME=3
-DB_SLAVE_MAX_IDLE_TIME=60
-DB_SLAVE_TIMEOUT=3
-
 # Redis
 REDIS_NAME=redis
 REDIS_DB=2
@@ -112,3 +92,7 @@ CONSUL_REGISTER_CHECK_NAME=user
 CONSUL_REGISTER_CHECK_TCP=127.0.0.1:8099
 CONSUL_REGISTER_CHECK_INTERVAL=10
 CONSUL_REGISTER_CHECK_TIMEOUT=1
+
+DB_DSN=mysql:dbname=test;host=localhost
+DB_USERNAME=root
+DB_PASSWORD=
