--- a/composer.json
+++ b/composer.json
@@ -14,36 +14,34 @@
         "ext-pdo": "*",
         "ext-json": "*",
         "ext-redis": "*",
-        "swoft/annotation": "^2.0",
-        "swoft/bean": "^2.0",
-        "swoft/event": "^2.0",
-        "swoft/aop": "^2.0",
-        "swoft/config": "^2.0",
-        "swoft/stdlib": "^2.0",
-        "swoft/framework": "^2.0",
-        "swoft/http-message": "^2.0",
-        "swoft/server": "^2.0",
-        "swoft/tcp-server": "^2.0",
-        "swoft/http-server": "^2.0",
-        "swoft/websocket-server": "^2.0",
-        "swoft/log": "^2.0",
-        "swoft/db": "^2.0",
-        "swoft/connection-pool": "^2.0",
-        "swoft/test": "^2.0",
-        "swoft/console": "^2.0",
-        "swoft/rpc": "^2.0",
-        "swoft/rpc-server": "^2.0",
-        "swoft/rpc-client": "^2.0",
-        "swoft/task": "^2.0",
-        "swoft/redis": "^2.0",
-        "swoft/proxy": "^2.0",
-        "swoft/component": "dev-master as 2.0"
+        "swoft/annotation": "2.0.*",
+        "swoft/bean": "2.0.*",
+        "swoft/event": "2.0.*",
+        "swoft/aop": "2.0.*",
+        "swoft/config": "2.0.*",
+        "swoft/stdlib": "2.0.*",
+        "swoft/framework": "2.0.*",
+        "swoft/http-message": "2.0.*",
+        "swoft/server": "2.0.*",
+        "swoft/http-server": "2.0.*",
+        "swoft/websocket-server": "2.0.*",
+        "swoft/log": "2.0.*",
+        "swoft/db": "2.0.*",
+        "swoft/connection-pool": "2.0.*",
+        "swoft/console": "2.0.*",
+        "swoft/rpc": "2.0.*",
+        "swoft/rpc-server": "2.0.*",
+        "swoft/rpc-client": "2.0.*",
+        "swoft/task": "2.0.*",
+        "swoft/redis": "2.0.*",
+        "swoft/proxy": "2.0.*"
     },
     "require-dev": {
         "swoft/swoole-ide-helper": "dev-master",
         "phpunit/phpunit": "^7.5",
         "friendsofphp/php-cs-fixer": "^2.10",
-        "psy/psysh": "@stable"
+        "psy/psysh": "@stable",
+        "phpstan/phpstan": "^0.11.2"
     },
     "autoload": {
         "psr-4": {
@@ -54,8 +52,16 @@
         "psr-4": {
         }
     },
+    "minimum-stability": "dev",
+    "prefer-stable": true,
+    "extra": {
+    },
     "scripts": {
-        "cs-fix": "php-cs-fixer fix $1"
+        "post-root-package-install": [
+            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
+        ],
+        "cs-fix": "php-cs-fixer fix $1",
+        "phpstan": "phpstan analyse app --memory-limit 300M -l 0 -c phpstan.neon"
     },
     "repositories": [
         {
