--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,8 @@
         "phpunit/phpunit": "^7.5",
         "friendsofphp/php-cs-fixer": "^2.10",
         "psy/psysh": "@stable",
-        "phpstan/phpstan": "^0.11.2"
+        "phpstan/phpstan": "^0.11.2",
+        "guzzlehttp/guzzle": "^6.3"
     },
     "autoload": {
         "psr-4": {
@@ -50,6 +51,7 @@
     },
     "autoload-dev": {
         "psr-4": {
+            "SwoftTest\\": "./test/"
         }
     },
     "minimum-stability": "dev",
@@ -60,6 +62,7 @@
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
+        "test": "./test/co-phpunit -c phpunit.xml --colors=always",
         "cs-fix": "php-cs-fixer fix $1",
         "phpstan": "phpstan analyse app --memory-limit 300M -l 0 -c phpstan.neon"
     },
